<?xml version="1.0"?>
<package>
  <name>incremental_esdf</name>
  <version>0.0.1</version>
  <description> ESDF Tools </description>
  <maintainer email="todo@123.com">huawei</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>

  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
