<?xml version="1.0"?>
<package>
  <name>cluttered_env_generator</name>
  <version>1.0.0</version>
  <description>Interface</description>

  <author email="auyuqiangyang@gmail.com">Yuqiang Yang</author>


  <maintainer email="auyuqiangyang@gmail.com">Yuqiang Yang</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
